feat: removed a bug that prevented images from loading

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -12,7 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
     <script type="module" src="../scripts/main.js"></script>
-    <title>Gallery</title>
+    <title>Asha Homes - Gallery</title>
   </head>
   <body>
     <header class="gallery-header">
@@ -82,7 +82,8 @@
       </section>
       <section class="gallery">
         <div class="container">
-          <div id="gallery-content" class="gallery-content"></div>
+          <div id="gallery-content" class="gallery-content">
+          </div>
         </div>
       </section>
     </main>
