--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     />
 
     <!-- Google fonts -->
+    <script src="./scripts/main.js" type="module"></script>
+
+     <!-- Preload JavaScript -->
+  <link rel="preload" href="../scripts/main.js" as="script" />
+    <title>Asha Homes</title>
   </head>
   <body>
     <!-- HEADER SECTION -->
@@ -23,13 +28,9 @@
         <div class="container">
           <nav>
             <div class="logo">
-              <a href="./index.html" class="logo">Asha Homes </a>
+              <a href="./index.html" class="logo" id="#home">Asha Homes </a>
             </div>
             <div class="nav-links">
-              <div class="nav-menu">
-                <i class="fas fa-bars" id="menuOpen"></i>
-                <i class="fas fa-times" id="menuClose"></i>
-              </div>
               <ul>
                 <li>
                   <a href="#home">Home</a>
@@ -41,9 +42,13 @@
                   <a href="#home-contact">Contact</a>
                 </li>
                 <li>
-                  <a href="#home-gallery">Gallery</a>
+                  <a href="./pages/gallery.html">Gallery</a>
                 </li>
               </ul>
+            </div>
+            <div class="nav-menu">
+              <i class="fas fa-bars" id="menuOpen"></i>
+              <i class="fas fa-times" id="menuClose"></i>
             </div>
           </nav>
 
@@ -51,7 +56,9 @@
           <section class="hero">
             <div class="container">
               <div class="main-message text-content">
-                <h1 class="main-heading">Building your <span> dream </span> home</h1>
+                <h1 class="main-heading">
+                  Building your <span> dream </span> home
+                </h1>
                 <p class="section-text">
                   Our Clients are our priority, we are dedicated to providing
                   quality services to our clients.
@@ -85,12 +92,12 @@
           </div>
         </section>
 
-        <!-- image display section -->
-        <section class="image-display">
+        <!-- Our Portfolio section -->
+        <section class="image-display" id="home-gallery">
           <div class="container">
             <div class="image-container">
               <div class="image-content heading-text">
-                <h2>Our <span class="heading-span">portfolio</span> </h2>
+                <h2>Our <span class="heading-span">portfolio</span></h2>
                 <p>
                   We provide quality services to our clients, we are dedicated
                   to providing quality services to our clients.
@@ -116,7 +123,7 @@
           </div>
         </section>
 
-        <section class="home">
+        <section class="home" id="home-gallery">
           <div class="container">
             <div class="home-content">
               <div class="home-image">
@@ -129,7 +136,9 @@
                   clients, we builsed larvish kitchen and living rooms, explore
                   our porfolio to view more.
                 </p>
-                <a href="./pages/gallery.html" class="cta-button button">Gallery</a>
+                <a href="./pages/gallery.html" class="cta-button button"
+                  >Gallery</a
+                >
               </div>
             </div>
           </div>
@@ -147,7 +156,7 @@
                   provide you with quality services and answer any questions you
                   may have.
                 </p>
-                <a href="home.html" class="cta-button button">Our Portfolio</a>
+                <a href="./pages/gallery.html" class="cta-button button">Our Portfolio</a>
               </div>
               <div class="about-image">
                 <img src="images/bedroom-2.jpg" alt="About us" />
@@ -156,12 +165,14 @@
           </div>
         </section>
 
-        <!-- image display section -->
-        <section class="testimonials">
+        <!-- Testimonial section -->
+        <section class="testimonials" id="home-testimonial">
           <div class="container">
             <div class="testimonial-content">
               <div class="testimonial-text heading-text text-content">
-                <h2>What  <span class="heading-span">Others</span> Say about Us</h2>
+                <h2>
+                  What <span class="heading-span">Others</span> Say about Us
+                </h2>
                 <p>
                   Our clients are always satisfied with our services, we are
                   always available to provide you with quality services and
@@ -171,7 +182,7 @@
               <div class="testimonial-slide">
                 <div class="testimonial">
                   <div class="testimonial-image">
-                    <img src="images/testimonial-1.jpg" alt="Testimonial" />
+                    <img src="./images/person-3.jpg" alt="Testimonial" />
                   </div>
                   <div class="testimonial-text">
                     <p>
@@ -184,7 +195,7 @@
                 </div>
                 <div class="testimonial">
                   <div class="testimonial-image">
-                    <img src="images/testimonial-2.jpg" alt="Testimonial" />
+                    <img src="./images/person-3.jpg" alt="Testimonial" />
                   </div>
                   <div class="testimonial-text">
                     <p>
@@ -197,7 +208,7 @@
                 </div>
                 <div class="testimonial">
                   <div class="testimonial-image">
-                    <img src="images/testimonial-3.jpg" alt="Testimonial" />
+                    <img src="./images/person-3.jpg" alt="Testimonial" />
                   </div>
                   <div class="testimonial-text">
                     <p>
@@ -210,7 +221,7 @@
                 </div>
                 <div class="testimonial">
                   <div class="testimonial-image">
-                    <img src="images/testimonial-3.jpg" alt="Testimonial" />
+                    <img src="./images/person-3.jpg" alt="Testimonial" />
                   </div>
                   <div class="testimonial-text">
                     <p>
@@ -223,7 +234,7 @@
                 </div>
                 <div class="testimonial">
                   <div class="testimonial-image">
-                    <img src="images/testimonial-3.jpg" alt="Testimonial" />
+                    <img src="./images/person-3.jpg" alt="Testimonial" />
                   </div>
                   <div class="testimonial-text">
                     <p>
@@ -236,7 +247,7 @@
                 </div>
                 <div class="testimonial">
                   <div class="testimonial-image">
-                    <img src="images/testimonial-3.jpg" alt="Testimonial" />
+                    <img src="./images/person-2.jpg" alt="Testimonial" />
                   </div>
                   <div class="testimonial-text">
                     <p>
@@ -249,7 +260,7 @@
                 </div>
                 <div class="testimonial">
                   <div class="testimonial-image">
-                    <img src="images/testimonial-3.jpg" alt="Testimonial" />
+                    <img src="./images/person-3.jpg" alt="Testimonial" />
                   </div>
                   <div class="testimonial-text">
                     <p>
@@ -265,12 +276,43 @@
           </div>
         </section>
 
+        <!-- image display section -->
+        <section class="image-display" id="home-gallery">
+          <div class="container">
+            <div class="image-container">
+              <div class="image-content heading-text">
+                <h2>Our <span class="heading-span">Gallery</span></h2>
+                <p>
+                  We provide quality services to our clients, we are dedicated
+                  to providing quality services to our clients.
+                </p>
+              </div>
+              <div class="image-grid">
+                <div class="image-slide">
+                  <div class="image">
+                    <img src="images/living-room-8.jpg" alt="balcony" />
+                  </div>
+                  <div class="image">
+                    <img src="images/kitchen-3.jpg" alt="Kitchen" />
+                  </div>
+                  <div class="image">
+                    <img src="images/living-room-4.jpg" alt="Living room" />
+                  </div>
+                  <div class="image">
+                    <img src="images/bathroom-3.jpg" alt="Bathroom" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- Contact SECTION -->
         <section class="contact" id="home-contact">
           <div class="container">
             <div class="contact-content">
               <div class="contact-text text-content heading-text">
-                <h2> <span class="heading-span">Contact</span> us</h2>
+                <h2><span class="heading-span">Contact</span> us</h2>
                 <p>
                   We are always available to provide you with quality services
                   and answer any questions you may have.
@@ -309,17 +351,16 @@
             <div class="footer-text">
               <h2>Asha homes</h2>
               <p>
-                We are a team of professionals who are dedicated to providing
-                quality services to our clients.
+               We provide Minimalist design and quality services to our clients. 
               </p>
             </div>
             <div class="footer-links">
               <h2>Quick links</h2>
               <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="gallery.html">Gallery/Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#home-galleryt">Portfolio</a></li>
+                <li><a href="#home-contact">Contact</a></li>
+                <li><a href="./pages/gallery.html">Gallery</a></li>
               </ul>
             </div>
             <div class="footer-contact">
@@ -330,12 +371,17 @@
                   York
                 </li>
                 <li><i class="fas fa-phone"></i>+123 456 7890</li>
-                <li><i class="fas fa-envelope">shahomes@gmail.com </i></li>
+                <li><i class="fas fa-envelope"> </i>ashahomes@gmail.com</li>
               </ul>
             </div>
           </div>
         </div>
       </footer>
+      <div class="copyright">
+        <div class="container">
+          <p>&copy; 2021 Asha homes. All rights reserved.</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
