feat: Fixed Button link error

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   clients, we builsed larvish kitchen and living rooms, explore
                   our porfolio to view more.
                 </p>
-                <a href="home.html" class="cta-button button">Read more</a>
+                <a href="./pages/gallery.html" class="cta-button button">Read more</a>
               </div>
             </div>
           </div>
